--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-    "expo": "53.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "expo": "^54.0.0",
+    "react": "19.1.0",
+    "react-native": "0.81.0"
   },
   "devDependencies": {
     "@types/jest": "29.5.12",
-    "@types/react": "18.3.12",
+    "@types/react": "^19.1.17",
     "babel-jest": "29.7.0",
     "babel-preset-expo": "^54.0.10",
     "jest": "29.7.0",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.0",
     "typescript": "5.6.3"
   },
   "jest": {
