--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,3 +19,8 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
 uuid = { version = "1", features = ["v4", "serde"] }
+
+[dev-dependencies]
+http = "1.0"
+tower = { version = "0.4", features = ["util"] }
+mime = "0.3"
