--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,17 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^12.0.1",
     "expo": "^54.0.0",
     "react": "19.1.0",
-    "react-native": "0.81.0"
+    "react-native": "0.81.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "29.5.12",
     "@types/react": "^19.1.17",
     "babel-jest": "29.7.0",
     "babel-preset-expo": "^54.0.10",
     "jest": "29.7.0",
+    "jest-expo": "^54.0.17",
+    "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "19.1.0",
     "typescript": "5.6.3"
   },
@@ -29,16 +34,13 @@
     "roots": [
       "<rootDir>/__tests__"
     ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": [
-        "babel-jest",
-        {
-          "presets": [
-            "babel-preset-expo"
-          ]
-        }
-      ]
-    },
+    "preset": "jest-expo",
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@react-native-async-storage/async-storage)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
