--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -8,7 +8,14 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "types": ["jest"]
+    "types": [
+      "jest"
+    ]
   },
-  "include": ["src", "App.tsx", "__tests__"]
+  "include": [
+    "src",
+    "App.tsx",
+    "__tests__"
+  ],
+  "extends": "expo/tsconfig.base"
 }
