--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,6 +18,8 @@ thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
+utoipa = { version = "5.0", features = ["uuid", "chrono"] }
+utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 
 [dev-dependencies]
