--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^12.0.1",
+    "@react-navigation/bottom-tabs": "^7.14.0",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.13.0",
+    "@tanstack/react-query": "^5.90.21",
     "expo": "^54.0.0",
+    "expo-haptics": "^15.0.8",
     "lucide-react-native": "^0.564.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.23.0",
     "react-native-svg": "^15.15.3",
     "zustand": "^5.0.11"
   },
