--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,40 +10,40 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/netinfo": "^12.0.1",
-    "@react-navigation/bottom-tabs": "^7.14.0",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.13.0",
-    "@tanstack/react-query": "^5.90.21",
-    "expo": "^54.0.0",
-    "expo-haptics": "^15.0.8",
-    "lucide-react-native": "^0.564.0",
-    "react": "19.1.0",
-    "react-native": "0.81.0",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0",
-    "react-native-svg": "^15.15.3",
-    "zustand": "^5.0.11"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@tanstack/react-query": "^5.62.0",
+    "expo": "~52.0.25",
+    "expo-haptics": "~14.0.1",
+    "lucide-react-native": "^0.468.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "29.5.12",
-    "@types/react": "^19.1.17",
-    "babel-jest": "29.7.0",
-    "babel-preset-expo": "^54.0.10",
-    "jest": "29.7.0",
-    "jest-expo": "^54.0.17",
+    "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.0.1",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.3.12",
+    "babel-jest": "^29.7.0",
+    "babel-preset-expo": "~12.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~52.0.0",
     "jest-fetch-mock": "^3.0.3",
-    "react-test-renderer": "19.1.0",
-    "typescript": "5.6.3"
+    "react-test-renderer": "18.3.1",
+    "typescript": "~5.3.3"
   },
   "jest": {
-    "testEnvironment": "node",
+    "preset": "jest-expo",
     "roots": [
       "<rootDir>/__tests__"
     ],
-    "preset": "jest-expo",
     "setupFiles": [
       "<rootDir>/jest.setup.js"
     ],
@@ -55,6 +55,7 @@
       "tsx",
       "js",
       "jsx"
-    ]
+    ],
+    "openHandlesTimeout": 0
   }
 }
