--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.62.0",
     "expo": "~52.0.25",
+    "expo-asset": "~11.0.5",
     "expo-haptics": "~14.0.1",
     "lucide-react-native": "^0.468.0",
     "react": "18.3.1",
